--- a/frontend-blog/package.json
+++ b/frontend-blog/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "run dev": "ng serve"
+    "dev": "ng serve"
   },
   "private": true,
   "dependencies": {
